--- a/test/shared/CMakeLists.txt
+++ b/test/shared/CMakeLists.txt
@@ -1,5 +1,7 @@
 # List of test functions
-add_custom_test(shared_dummy)
+add_custom_test(state)
+add_custom_test(engine)
+add_custom_test(ai)
 
 # vim: set sw=2 sts=2 et:
 
